# metadataセクションではパッケージのメタデータを定義する
# これらの値はpypiで公開した際に表示される。
# なおversion等、一部のキーはディレクティブの指定により外部ファイルから値を取得することができる
# https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name = pyskelton
version = attr: pyskelton.__version__
author = Dai KOBAYASHI
description = Skelton of python package
license_files = LICENSE

# optionsセクションではパッケージの依存関係やpip installした時の動作を定義する
# 値が複数ある場合、インデントすることで1行に1つの値を書くことができる。
# https://setuptools.readthedocs.io/en/latest/setuptools.html#options
[options]
python_requires = >=3.8
install_requires =
    numpy
    sphinx 
    sphinx-rtd-theme
    myst-parser
    nbsphinx

# optionの内、値のTypeがsectionのものは別セクションで記述する。
[options.extras_require]
develop =
    jupyter